--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <script src="https://cdn.jsdelivr.net/gh/kitao/pyxel/wasm/pyxel.js"></script>
-<pyxel-run name="pyxelpractice2.py"></pyxel-run>
+<pyxel-run name="matometayatu.py"></pyxel-run>
