--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pyxel Tic Tac Toe</title>
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/kitao/pyxel/wasm/pyxel.js"></script>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/pyodide/v0.17.0/full/pyodide.js"></script>
     <script>
         async function main() {
             let pyodide = await loadPyodide();
+
+            // 必要なパッケージのインストール
             await pyodide.loadPackage("numpy");
-            // 他のパッケージを読み込む
+
+            // Pythonコードの実行
             await pyodide.runPythonAsync(`
+                import numpy as np
                 import pyxel
-                // from game import State
-                // from pv_mcts import pv_mcts_action
-                # 他のモジュールのインポート
+                from game import State
+                from pv_mcts import pv_mcts_action
+
+                # ゲームクラスの定義と実行
+                TicTacToeGame()
             `);
-            await pyodide.runPythonAsync("TicTacToeGame()");
         }
+
         main();
     </script>
 </body>
